Fixed side-nav so overlay and hamburger icon display correctly. Removed depricated HTML tags, fixed some css rules and html readability.

--- a/scsite/static/bootstrap/css/style.css
+++ b/scsite/static/bootstrap/css/style.css
@@ -10,7 +10,8 @@
 body {
   line-height: 200%;
   font-family: quicksand, assistant, sans-serif;
-  font-size: 16px
+  font-size: 16px;
+  overflow-x: hidden;
 }
 
 main {
@@ -219,10 +220,11 @@ article .meta li:last-child:after
     color: white;
 }
 
-.sidebar-nav center li {
+.sidebar-nav li.center {
     font-size:18px;
     padding: 10% 0;
     color: black;
+    text-align: center;
 }
 
 .sidebar-nav li:before {
@@ -270,6 +272,12 @@ article .meta li:last-child:after
     background-color: transparent;
 }
 
+.avatar {
+  max-height: 60px;
+  width: 60px;
+  border-radius: 50%;
+}
+
 .sidebar-nav .dropdown-menu {
     position: relative;
     width: 100%;
@@ -285,7 +293,7 @@ article .meta li:last-child:after
 /*       Hamburger-Cross         */
 /*-------------------------------*/
 
-.hamburger {
+button.hamburger {
   position: fixed;
   top: 20px;
   z-index: 999;
@@ -297,12 +305,12 @@ article .meta li:last-child:after
   background: transparent;
   border: none;
 }
-.hamburger:hover,
-.hamburger:focus,
-.hamburger:active {
+button.hamburger:hover,
+button.hamburger:focus,
+button.hamburger:active {
   outline: none;
 }
-.hamburger.is-closed:before {
+button.hamburger.is-closed:before {
   content: '';
   display: block;
   width: 100px;
@@ -314,27 +322,27 @@ article .meta li:last-child:after
   -webkit-transform: translate3d(0,0,0);
   -webkit-transition: all .35s ease-in-out;
 }
-.hamburger.is-closed:hover:before {
+button.hamburger.is-closed:hover:before {
   opacity: 1;
   display: block;
   -webkit-transform: translate3d(-100px,0,0);
   -webkit-transition: all .35s ease-in-out;
 }
 
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom,
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
+button.hamburger.is-closed .hamb-top,
+button.hamburger.is-closed .hamb-middle,
+button.hamburger.is-closed .hamb-bottom,
+button.hamburger.is-open .hamb-top,
+button.hamburger.is-open .hamb-middle,
+button.hamburger.is-open .hamb-bottom {
   position: absolute;
   left: 0;
   height: 4px;
   width: 100%;
 }
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom {
+button.hamburger.is-closed .hamb-top,
+button.hamburger.is-closed .hamb-middle,
+button.hamburger.is-closed .hamb-bottom {
   background-color: rgb(19,125,73);
 }
 .hamburger.is-closed .hamb-top {
@@ -358,14 +366,13 @@ article .meta li:last-child:after
   bottom: 0;
   -webkit-transition: all .35s ease-in-out;
 }
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
+button.hamburger.is-open .hamb-top,
+button.hamburger.is-open .hamb-middle,
+button.hamburger.is-open .hamb-bottom {
   background-color: #1a1a1a;
-
 }
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-bottom {
+button.hamburger.is-open .hamb-top,
+button.hamburger.is-open .hamb-bottom {
   right: 800%;
   margin-right: 200px;
   top: 50%;
@@ -434,12 +441,19 @@ article .meta li:last-child:after
 
 
 .thumbnail-big {
-    margin-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.thumbnail-big a {
+    width: 100%;
+    text-align: center;
 }
 
 .thumbnail-big img{
-    height: 250px;
-    width: 250px  !important;
+    width: 250px;
+    height:250px;
+    display: inline;
 }
 
 .thumbnail-big .col-md-3,
@@ -452,47 +466,45 @@ article .meta li:last-child:after
 /*          Carousel             */
 /*-------------------------------*/
 
-.multi-item-carousel{
-  .carousel-inner{
-    > .item{
-      transition: 500ms ease-in-out left;
-    }
-    .active{
-      &.left{
-        left:-33%;
-      }
-      &.right{
-        left:33%;
-      }
-    }
-    .next{
-      left: 33%;
-    }
-    .prev{
-      left: -33%;
-    }
-    @media all and (transform-3d), (-webkit-transform-3d) {
-      > .item{
-        transition: 500ms ease-in-out left;
-        transition: 500ms ease-in-out all;
-        backface-visibility: visible;
-        transform: none!important;
-      }
-    }
+.multi-item-carousel .carousel-inner > .item {
+  -webkit-transition: 500ms ease-in-out left;
+  transition: 500ms ease-in-out left;
+}
+.multi-item-carousel .carousel-inner .active.left {
+  left: -33%;
+}
+.multi-item-carousel .carousel-inner .active.right {
+  left: 33%;
+}
+.multi-item-carousel .carousel-inner .next {
+  left: 33%;
+}
+.multi-item-carousel .carousel-inner .prev {
+  left: -33%;
+}
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .multi-item-carousel .carousel-inner > .item {
+    -webkit-transition: 500ms ease-in-out left;
+    transition: 500ms ease-in-out left;
+    -webkit-transition: 500ms ease-in-out all;
+    transition: 500ms ease-in-out all;
+    -webkit-backface-visibility: visible;
+            backface-visibility: visible;
+    -webkit-transform: none!important;
+            transform: none!important;
   }
-  .carousel-control{
-    &.left, &.right{
-    }
-  }
+}
+.multi-item-carousel .carouse-control.left,
+.multi-item-carousel .carouse-control.right {
+  background-image: none;
 }
 
 
 .carousel-control.left,
 .carousel-control.right{
     background-image: none;
-    height: 60px;
+    height: 100%;
     width:60px;
-    margin-top:100px;
     color: green;
 }
 
@@ -507,14 +519,15 @@ article .meta li:last-child:after
     visibility: hidden;
 }
 
-.carousel:hover .carousel-caption,
-.carousel:focus .carousel-caption {
-    visibility: visible;
-    width: 250px;
-    height: 250px;
-    background: rgba(0, 0, 0, 0.75);
-    left: 16%;
-    top: 14%;
+.thumbnail-big:hover .carousel-caption,
+.thumbnail-big:focus .carousel-caption {
+  visibility: visible;
+  width: 250px;
+  height: 250px;
+  background: rgba(0, 0, 0, 0.75);
+  right: 60px;
+  bottom: 0;
+  padding: 1em;
     }
 /*-------------------------------*/
 /*           footer              */
